--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,15 +1,48 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ProfileFragment">
 
-    <ImageView
-        android:id="@+id/imageView8"
+    <TextView
+        android:id="@+id/TextViewProfileName"
+        android:layout_width="match_parent"
+        android:layout_height="87dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="15dp"
+        android:gravity="center"
+        android:text="@string/profile_name"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/TextViewExp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/botdertopp" />
-</RelativeLayout>
+        android:layout_margin="20dp"
+        android:text="0"
+        android:gravity="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="15dp"
+        android:gravity="center"
+        android:text="LEVEL :"
+        android:textSize="24sp" />
+
+
+    <TextView
+        android:id="@+id/TextViewLevel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="0"
+        android:gravity="center"/>
+
+
+
+</LinearLayout>
