--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -43,6 +44,19 @@
         android:text="0"
         android:gravity="center"/>
 
+    <ImageView
+        android:id="@+id/ImageViewProfile"
+        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_height="100dp"
+        android:src="@drawable/girlfriend" />
+
+    <Button
+        android:id="@+id/LoadImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="loadPicture"
+        android:text="Button" />
 
 
 </LinearLayout>
