--- a/app/src/main/res/layout/rewardslist.xml
+++ b/app/src/main/res/layout/rewardslist.xml
@@ -14,42 +14,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
-
+            android:id="@+id/LayoutRewards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:onClick="showCustomAlertDialogBox"
+            android:onClick="StartRewardActivity"
             android:orientation="horizontal">
 
-
             <ImageView
-                android:id="@+id/ImageViewRizal"
+                android:id="@+id/ImageViewRewards"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginLeft="3dp"
-                app:srcCompat="@drawable/rizal" />
-
-            <LinearLayout
-                android:layout_width="224dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:orientation="vertical">
+                app:srcCompat="@drawable/girlfriend" />
 
                 <TextView
-                    android:id="@+id/TextViewTitle"
+                    android:id="@+id/TextViewTitleRewards"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Title"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/TextViewDetails"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Details" />
-            </LinearLayout>
-
+                    android:textSize="25sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
